--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@tanstack/react-query": "^4.28.0",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "deep-object-diff": "^1.1.9",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
@@ -23,6 +25,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
